# mt4g

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: usage.md
include/const/: chartScript.hpp
include/typedef/: cliOptions.hpp
src/: main.cpp
src/utils/: printing.cpp
